# CryptoSub

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android-build.yml  build-desktop.yml  deploy-web.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
desktop/: .gitignore  cryptosub.key.pub  index.html  package-lock.json  package.json  vite.config.ts
desktop/electron/: main.cjs  preload.cjs
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: AccountModal.tsx  AddContactModal.tsx  CreateGroupModal.tsx  Sidebar.tsx  UpdateModal.tsx
gradle/: libs.versions.toml
iosApp/iosApp/: AppDelegate.swift  BackgroundRefreshHandler.swift  ContentView.swift  XmtpClientWrapper.swift  iOSApp.swift
privacy-messenger/: .env.example  Dockerfile  docker-compose.yml  go.mod  go.sum  http_handlers.go  main.go  schema.cql  sms.go
privacy-messenger/attachments/: s3.go
privacy-messenger/auth/: otp.go  phone_hash.go  register.go  session.go
privacy-messenger/config/: config.go
privacy-messenger/gateway/: ws_manager.go
privacy-messenger/push/: fcm.go
privacy-messenger/queue/: offline_queue.go
privacy-messenger/relay/: envelope.go  router.go  sealed_sender.go
shared/: build.gradle.kts
webapp/: index.html  package.json  vite.config.ts
webapp/src/: index.css  main.tsx
(+104 files in other folders)
